Add missing dependency on Test::Pod

--- a/.github/workflows/test-lang-perl.yml
+++ b/.github/workflows/test-lang-perl.yml
@@ -56,6 +56,7 @@ jobs:
                                                        Object::Tiny \
                                                        Regexp::Common \
                                                        Test::Exception \
+                                                       Test::Pod \
                                                        Try::Tiny \
                                                        inc::Module::Install
 
@@ -91,6 +92,7 @@ jobs:
                                                        Object::Tiny \
                                                        Regexp::Common \
                                                        Test::Exception \
+                                                       Test::Pod \
                                                        Try::Tiny \
                                                        inc::Module::Install
 
