--- a/.github/workflows/test-lang-perl.yml
+++ b/.github/workflows/test-lang-perl.yml
@@ -56,6 +56,7 @@ jobs:
                                                        Object::Tiny \
                                                        Regexp::Common \
                                                        Test::Exception \
+                                                       Test::More \
                                                        Test::Pod \
                                                        Try::Tiny \
                                                        inc::Module::Install
@@ -92,6 +93,7 @@ jobs:
                                                        Object::Tiny \
                                                        Regexp::Common \
                                                        Test::Exception \
+                                                       Test::More \
                                                        Test::Pod \
                                                        Try::Tiny \
                                                        inc::Module::Install
