--- a/.github/workflows/test-lang-perl-ARM.yml
+++ b/.github/workflows/test-lang-perl-ARM.yml
@@ -52,6 +52,7 @@ jobs:
           cpanm --mirror https://www.cpan.org/ install Compress::Zstd \
                                                        Encode \
                                                        Error::Simple \
+                                                       Module::Install \
                                                        Module::Install::ReadmeFromPod \
                                                        Object::Tiny \
                                                        Perl::Critic \
@@ -59,8 +60,7 @@ jobs:
                                                        Test::Exception \
                                                        Test::More \
                                                        Test::Pod \
-                                                       Try::Tiny \
-                                                       inc::Module::Install
+                                                       Try::Tiny
 
       - name: Lint
         run: ./build.sh lint
@@ -90,6 +90,7 @@ jobs:
                                                        Compress::Zstd \
                                                        Encode \
                                                        Error::Simple \
+                                                       Module::Install \
                                                        Module::Install::ReadmeFromPod \
                                                        Object::Tiny \
                                                        Perl::Critic \
@@ -97,8 +98,7 @@ jobs:
                                                        Test::Exception \
                                                        Test::More \
                                                        Test::Pod \
-                                                       Try::Tiny \
-                                                       inc::Module::Install
+                                                       Try::Tiny
 
       - name: Cache Local Maven Repository
         uses: actions/cache@v4
