--- a/.github/workflows/test-lang-perl.yml
+++ b/.github/workflows/test-lang-perl.yml
@@ -52,6 +52,7 @@ jobs:
           cpanm --mirror https://www.cpan.org/ install Compress::Zstd \
                                                        Encode \
                                                        Error::Simple \
+                                                       JSON::MaybeXS \
                                                        Module::Install \
                                                        Module::Install::ReadmeFromPod \
                                                        Object::Tiny \
@@ -89,6 +90,7 @@ jobs:
                                                        Compress::Zstd \
                                                        Encode \
                                                        Error::Simple \
+                                                       JSON::MaybeXS \
                                                        Module::Install \
                                                        Module::Install::ReadmeFromPod \
                                                        Object::Tiny \
